reorganization of the project